<resources>
    <string name="app_name">My LPG</string>
    <string name="verify_mobile">Verify Mobile</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="get_otp">Get OTP</string>
    <string name="skip">SKIP</string>
    <string name="enter_the_otp_you_have_reiceved">Enter the OTP you have Reiceved</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="login">LOGIN</string>
    <string name="title_activity_verify_phone">VerifyPhoneActivity</string>
    <string name="title_activity_profile">My LPG</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_request_sec_cylinder">Request For Second Cylinder</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_select_language">Select Language</string>
    <string name="nav_instructions">Safty Clip/Instructions</string>
    <string name="nav_talk_to_us">Talk To Us</string>
    <string name="nav_communicate">Communicate</string>
    <string name="nav_share">Share</string>
    <string name="nav_send">Send</string>
    <string name="nav_home">Home</string>
    <string name="logout">Logout</string>
    <string name="nav_logout">Logout</string>
    <string name="info2">Info</string>
    <string name="book_pay"><![CDATA[Book & Pay]]></string>
    <string name="refill_history">Refill History</string>
    <string name="service_request">Service Request</string>
    <string name="emergency_helpline">IVRS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_name">Name</string>
    <string name="consumer_no">Consumer No.</string>
    <string name="consumer_id">Consumer ID</string>
    <string name="phone_no">Phone No.</string>
</resources>
