<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_menu_home"
        android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_talk_to_us"
            android:icon="@drawable/ic_menu_phone_in_talk"
            android:title="@string/nav_talk_to_us" />
        <item
            android:id="@+id/nav_request_sec_cylinder"
            android:icon="@drawable/ic_menu_cylinder"
            android:title="@string/nav_request_sec_cylinder" />
        <item
            android:id="@+id/nav_select_language"
            android:icon="@drawable/ic_menu_language"
            android:title="@string/nav_select_language" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_menu_notifications"
            android:title="@string/nav_notifications" />
        <item
            android:id="@+id/nav_instructions"
            android:icon="@drawable/ic_menu_info"
            android:title="@string/nav_instructions" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_account"
            android:title="@string/nav_logout" />
    </group>

    <item android:title="@string/nav_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_send" />
        </menu>
    </item>

</menu>
