<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">


    <TextView
        android:id="@+id/user_name"
        android:padding="4dp"
        android:textSize="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nav_name" />

    <TextView
        android:id="@+id/consumer_no"
        android:padding="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/consumer_no" />

    <TextView
        android:id="@+id/consumer_id"
        android:padding="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/consumer_id" />

    <TextView
        android:id="@+id/user_phone"
        android:padding="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_no" />


</LinearLayout>
