<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_background"/>

    <EditText
        android:id="@+id/editTextPhone"

        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="36dp"
        android:ems="10"
        android:hint="@string/mobile_no"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:background="@color/clrbackground"
        app:layout_constraintBottom_toTopOf="@+id/buttonOtp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/spinnerCountries"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="86dp"
        android:layout_marginEnd="86dp"
        android:layout_marginBottom="32dp"
        android:text="@string/verify_mobile"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonOtp"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="102dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="23dp"
        android:text="@string/get_otp"
        android:background="@color/colorPrimary"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/buttonSkip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonSkip"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginStart="102dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="116dp"
        android:onClick="skip"
        android:text="@string/skip"
        android:background="@color/colorPrimary"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinnerCountries"
        android:layout_width="72dp"
        android:layout_height="43dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="292dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editTextPhone"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>